# python-project-template

./: .buildinfo  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  genindex.html  index.html  objectives.html  objects.inv  pyproject.toml  readme.html  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  objectives.doctree  readme.doctree
.github/workflows/: docs.yml  documentation.yaml
_sources/: objectives.md.txt
docs/: conf.py  index.rst
hooks/: post_gen_project.py
{{cookiecutter.project_type}}/__cc_package/{{cookiecutter.directory_name}}/: pyproject.toml  setup.py
{{cookiecutter.project_type}}/__cc_package/{{cookiecutter.directory_name}}/docs/: index.rst
{{cookiecutter.project_type}}/__cc_package/{{cookiecutter.directory_name}}/test/: README.md
{{cookiecutter.project_type}}/__cc_package/{{cookiecutter.directory_name}}/{{cookiecutter.pkg_name}}/mypackage/: mymodule.py
{{cookiecutter.project_type}}/__cc_package/{{cookiecutter.directory_name}}/{{cookiecutter.pkg_name}}/scripts/: script.py
{{cookiecutter.project_type}}/__cc_simple_project/: cookiecutter.json
{{cookiecutter.project_type}}/__cc_simple_project/{{cookiecutter.directory_name}}/: README.md
{{cookiecutter.project_type}}/__cc_simple_project/{{cookiecutter.pkg_name}}/: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
{{cookiecutter.project_type}}/__cc_simple_project/{{cookiecutter.pkg_name}}/.github/workflows/: build.yml  docs.yml
{{cookiecutter.project_type}}/__cc_simple_project/{{cookiecutter.pkg_name}}/azure-pipelines/: build-docker.yml  semantic-release.yml
{{cookiecutter.project_type}}/__cc_simple_project/{{cookiecutter.pkg_name}}/common/: utils.py  yaml.py
{{cookiecutter.project_type}}/__cc_simple_project/{{cookiecutter.pkg_name}}/docker/: Dockerfile  start.sh
{{cookiecutter.project_type}}/__cc_simple_project/{{cookiecutter.pkg_name}}/docs/: conf.py  readme.md
{{cookiecutter.project_type}}/__cc_simple_project/{{cookiecutter.pkg_name}}/settings/: config.py  constants.py  log.py
{{cookiecutter.project_type}}/__cc_simple_streamlit/: cookiecutter.json
{{cookiecutter.project_type}}/__cc_simple_streamlit/{{cookiecutter.pkg_name}}/: .gitignore  README.md  app.py  pyproject.toml
{{cookiecutter.project_type}}/__cc_simple_streamlit/{{cookiecutter.pkg_name}}/azure-pipelines/: build-docker.yml  semantic-release.yml
{{cookiecutter.project_type}}/__cc_simple_streamlit/{{cookiecutter.pkg_name}}/docker/: Dockerfile
{{cookiecutter.project_type}}/__cc_simple_streamlit/{{cookiecutter.pkg_name}}/docs/: index.rst
{{cookiecutter.project_type}}/__cc_simple_streamlit/{{cookiecutter.pkg_name}}/settings/: constants.py
