[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = "Simple project template for Python projects"
authors = ["Mattia Tantardini <mattia.tantardini@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
