[tool.poetry]
name = "python-project-template"
version = "0.0.0"
description = "Simple project template for Python projects"
authors = ["Mattia Tantardini <mattia.tantardini@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cookiecutter = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
commitizen = "^2.35.0"
python-semantic-release = "^7.32.1"
pytest = "^7.1.3"

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.3.0"
sphinx-autodoc-typehints = "^1.19.4"
sphinx-rtd-theme = "^1.0.0"
myst-parser = "^0.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
