[tool.poetry]
name = "{{cookiecutter.pkg_name}}"
version = "0.0.0"
description = "Simple project template for python projects"
authors = ["{{cookiecutter.author}}"]

[tool.poetry.dependencies]
python = "^3.11"
tantaroba = "^0.4.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
commitizen = "^2.35.0"
python-semantic-release = "^7.32.1"
pytest = "^7.1.3"

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.3.0"
sphinx-autodoc-typehints = "^1.19.4"
sphinx-rtd-theme = "^1.0.0"
myst-parser = "^0.18.1"

# --- PyTest config -------------------------------------=------ #
[tool.pytest.ini_options]
markers = [
    "functions: mark test for the base functionalities",
    "core: all about the core",
    "db: all about the database",
    "api: all about the api of the system",
]

# --- Ruff --- #
[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- Commitizen --- #
[tool.commitizen]
name = "cz_conventional_commits"
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]
version = "0.0.0"
version_files = [
    "pyproject.toml:version",
    "__version__.py:__version__"
]
tag_format = "v$major.$minor.$patch"
annotated_tag = true
bump_message = "release $current_version -> $new_version"
